# Enterprise-Intelligence-Agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  enterprise_intelligence_agent_project_charter.md  pyproject.toml  render.yaml  vercel.json
db/: seed_foundation.sql
db/migrations/: 001_foundation.sql  002_signal_engine.sql  003_phase6_readiness.sql  004_evidence_resilience.sql
docs/: collaboration-record.md  demo-script.md  deployment-runbook.md  submission-checklist.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.jsx  styles.css
frontend/src/components/: AppWorkspace.jsx  BrandMark.jsx  BriefingStudio.jsx  DecisionLedger.jsx  EvidenceCasefile.jsx  EvidenceLedger.jsx  LandingPage.jsx  OverviewPanel.jsx  ScenarioLab.jsx
frontend/src/hooks/: useExecutiveData.js
frontend/src/lib/: api.js
metricthread/: __init__.py  api.py  casefile.py  cli.py  database.py  entities.py  executive.py  executive_repository.py  generator.py  insight_repository.py  insights.py  live_pipeline.py  resilience.py  resilience_repository.py  signal_repository.py  signals.py  streams.py
scripts/: phase2_rehearsal.py  phase3_demo.py  phase4_demo.py  phase6_rehearsal.py  test
tests/: test_api.py  test_casefile.py  test_database.py  test_entities.py  test_executive.py  test_generator.py  test_insight_repository.py  test_insights.py  test_live_pipeline.py  test_resilience.py  test_signal_repository.py  test_signals.py  test_streams.py
