[project]
name = "metricthread"
version = "0.1.0"
description = "Grounded cross-functional intelligence for auditable business decisions."
requires-python = ">=3.13"
dependencies = [
  "psycopg[binary]>=3.2,<4",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
