[project]
name = "metricthread"
version = "0.1.0"
description = "Grounded cross-functional intelligence for auditable business decisions."
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "numpy>=2.2,<3",
  "pandas>=2.2,<3",
  "psycopg[binary]>=3.2,<4",
  "python-dotenv>=1.2,<2",
  "statsmodels>=0.14,<1",
  "uvicorn[standard]>=0.30,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
